--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ form p{margin:0 0 10px 0}
 <button type="submit">Envoyer la demande</button>
 </form>
 <br>
-<p>📍 Kinshasa – RDC<br>📧 contact@aigleconsult.com | ☎️ +243 831 940 008 / +243 827 704 694</p>
+<p>📍 Kinshasa – RDC<br>📧 contact@aigleconsult.net | ☎️ +243 831 940 008 / +243 827 704 694</p>
 </div>
 </section>
 
@@ -96,3 +96,4 @@ form p{margin:0 0 10px 0}
 
 </body>
 </html>
+
