--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ form p{margin:0 0 10px 0}
 <h2>Contact & inscription</h2>
 <div class="about">
 <p>Vous souhaitez étudier en Europe ? Remplissez le formulaire ci-dessous et notre équipe vous contactera.</p>
-<form action="mailto:contact@aigleconsult.com" method="post">
+<form action="https://formspree.io/f/mlggrgew" method="post">
 <p><input type="text" name="Nom" placeholder="Nom complet" required></p>
 <p><input type="email" name="Email" placeholder="Adresse email" required></p>
 <p><input type="text" name="Pays" placeholder="Pays d'étude souhaité"></p>
@@ -96,4 +96,5 @@ form p{margin:0 0 10px 0}
 
 </body>
 </html>
+
 
