--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@ form p{margin:0 0 10px 0}
 <button type="submit">Envoyer la demande</button>
 </form>
 <br>
-<p>📍 Kinshasa – RDC<br>📧 contact@aigleconsult.net | ☎️ +243 831 940 008 / +243 827 704 694</p>
+<p><strong>Localisation :</strong> Kinshasa, RDC<br>
+<strong>E-mail :</strong> <a href="mailto:contact@aigleconsult.net">contact@aigleconsult.net</a><br>
+<strong>Téléphone :</strong> +243 827 704 694</p> 
 </div>
 </section>
 
 <!-- Bouton WhatsApp flottant -->
-<a href="https://wa.me/243831940008" target="_blank" style="position:fixed;bottom:20px;right:20px;background:#25D366;color:white;padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">💬 WhatsApp</a>
+<a href="https://wa.me/24382770469" target="_blank" style="position:fixed;bottom:20px;right:20px;background:#25D366;color:white;padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">💬 WhatsApp</a>
 
 <footer>
 <p>© 2026 – Aigle Consult. Tous droits réservés.</p>
@@ -96,5 +98,6 @@ form p{margin:0 0 10px 0}
 
 </body>
 </html>
+
 
 
