--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ form p{margin:0 0 10px 0}
 <!-- Bouton WhatsApp flottant -->
 <a href="https://wa.me/24382770469" target="_blank" style="position:fixed;bottom:20px;right:20px;background:#25D366;color:white;padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">💬 WhatsApp</a>
 <!-- Bouton Facebook flottant -->
-<a href="https://www.facebook.com/YOURPAGE" target="_blank"
+<a href="https://www.facebook.com/aigleconsult/" target="_blank"
    style="position:fixed;bottom:80px;right:20px;background:#1877F2;color:white;
    padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;
    box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">
@@ -104,6 +104,7 @@ form p{margin:0 0 10px 0}
 
 </body>
 </html>
+
 
 
 
