--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@ form p{margin:0 0 10px 0}
 <button type="submit">Envoyer la demande</button>
 </form>
 <br>
-<p><strong>Localisation :</strong> Kinshasa, RDC<br>
+<p>
+<strong>Localisation :</strong> Kinshasa, RDC<br>
 <strong>E-mail :</strong> <a href="mailto:contact@aigleconsult.net">contact@aigleconsult.net</a><br>
-<strong>Téléphone :</strong> +243 827 704 694</p> 
+<strong>Téléphone :</strong> <a href="tel:+243827704694">+243 827 704 694</a>
+</p>
 </div>
 </section>
 
@@ -109,6 +111,7 @@ form p{margin:0 0 10px 0}
 
 </body>
 </html>
+
 
 
 
