--- a/index.html
+++ b/index.html
@@ -1,149 +1,129 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aigle Consult | Conseil & Solutions Professionnelles</title>
-<style>
-body {margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#1f2937;background:#f9fafb}
-nav {background:#0f172a;padding:1rem 2rem;display:flex;justify-content:space-between;align-items:center}
-nav strong {color:#fff;font-size:1.2rem}
-nav a {color:#e5e7eb;margin-left:1rem;text-decoration:none;font-weight:500}
-nav a:hover{text-decoration:underline}
-header {background:linear-gradient(135deg,#1e3a8a,#2563eb);color:white;padding:5rem 2rem;text-align:center}
-header h1{font-size:2.8rem;margin-bottom:1rem}
-header p{font-size:1.25rem;max-width:700px;margin:auto}
-section{padding:4rem 2rem;max-width:1100px;margin:auto}
-h2{text-align:center;margin-bottom:3rem;font-size:2rem}
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:2rem}
-.card{background:white;border-radius:14px;padding:2rem;box-shadow:0 15px 30px rgba(0,0,0,0.08)}
-.card h3{margin-top:0;color:#1e40af}
-.about{background:#fff;border-radius:14px;padding:3rem;box-shadow:0 10px 25px rgba(0,0,0,0.06)}
-footer{background:#0f172a;color:#9ca3af;text-align:center;padding:2rem}
-button{background:#2563eb;color:white;border:none;padding:0.9rem 2rem;border-radius:999px;font-size:1rem;cursor:pointer}
-button:hover{background:#1d4ed8}
-input,textarea{width:100%;padding:10px;margin-bottom:10px;border:1px solid #ccc;border-radius:6px}
-form p{margin:0 0 10px 0}
-</style>
+  <meta charset="UTF-8">
+  <title>Aigle Consult – Academic Mobility Consulting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-<nav>
-<strong>Aigle Consult</strong>
-<div>
-<a href="#" data-fr="Accueil" data-en="Home">Accueil</a>
-<a href="#services" data-fr="Services" data-en="Services">Services</a>
-<a href="#apropos" data-fr="À propos" data-en="About">À propos</a>
-<a href="#contact" data-fr="Contact" data-en="Contact">Contact</a>
-<button onclick="setLang('fr')" style="margin-left:15px;">FR</button>
-<button onclick="setLang('en')">EN</button>
-</div>
-</nav>
-
-<header>
-<h1 data-fr="Aigle Consult – Solutions professionnelles adaptées à vos besoins"
-    data-en="Aigle Consult – Professional solutions tailored to your needs">
-Aigle Consult – Solutions professionnelles adaptées à vos besoins
-</h1>
-
-<p data-fr="Agence basée à Kinshasa (RDC), nous accompagnons les étudiants dans leurs démarches pour intégrer des universités partenaires en Europe."
-   data-en="Agency based in Kinshasa (DRC), we support students in their process of joining partner universities in Europe.">
-Agence basée à Kinshasa (RDC), nous accompagnons les étudiants dans leurs démarches pour intégrer des universités partenaires en Europe.
-</p>
-
-<br>
+<!-- NAVBAR -->
+<header class="navbar">
+  <div class="container nav-content">
+    <div class="logo">AIGLE CONSULT</div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<section id="services">
-<h2 data-fr="Nos services" data-en="Our Services">Nos services</h2>
-<div class="cards">
-<div class="card">
-<h3 data-fr="Orientation académique" data-en="Academic Guidance">Orientation académique</h3>
-<p data-fr="Conseil personnalisé pour aider les étudiants à choisir des universités et des formations adaptées à leur profil."
-   data-en="Personalized advice to help students choose universities and courses suitable for their profile.">
-Conseil personnalisé pour aider les étudiants à choisir des universités et des formations adaptées à leur profil.
-</p>
-</div>
-<div class="card">
-<h3 data-fr="Accompagnement des démarches" data-en="Application Assistance">Accompagnement des démarches</h3>
-<p data-fr="Assistance complète pour les candidatures universitaires, dossiers d’inscription et procédures administratives."
-   data-en="Complete assistance for university applications, registration files, and administrative procedures.">
-Assistance complète pour les candidatures universitaires, dossiers d’inscription et procédures administratives.
-</p>
-</div>
-<div class="card">
-<h3 data-fr="Pays & universités partenaires" data-en="Partner Countries & Universities">Pays & universités partenaires</h3>
-<p data-fr="Nous accompagnons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord, grâce à nos partenariats académiques."
-   data-en="We guide students to universities in France, Belgium, Greece, Romania, and Northern Cyprus through our academic partnerships.">
-Nous accompagnons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord, grâce à nos partenariats académiques.
-</p>
-</div>
-</div>
+<!-- HERO (UNIVERSITY STYLE) -->
+<section class="hero">
+  <div class="overlay">
+    <div class="container hero-content">
+      <h1>
+        AIGLE CONSULT <br>
+        <span>Academic Mobility & University Partnership Services</span>
+      </h1>
+      <p>
+        Based in Kinshasa, DRC, we support students in pursuing higher education
+        opportunities in Europe.
+      </p>
+      <div class="hero-buttons">
+        <a href="#services" class="btn gold">Our Services</a>
+        <a href="#contact" class="btn outline">Contact Us</a>
+      </div>
+    </div>
+  </div>
 </section>
 
-<section id="apropos">
-<h2 data-fr="À propos de Aigle Consult" data-en="About Aigle Consult">À propos de Aigle Consult</h2>
-<div class="about">
-<p data-fr="Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants désirant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace."
-   data-en="Aigle Consult is a consulting agency based in Kinshasa, DRC. We support students wishing to pursue their studies in Europe with professional, transparent, and efficient guidance.">
-Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants désirant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace.
-</p>
-<p data-fr="Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des formations reconnues et aidons les étudiants à concrétiser leur projet académique international."
-   data-en="Through our partnerships with several European universities, we facilitate access to recognized programs and help students realize their international academic projects.">
-Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des formations reconnues et aidons les étudiants à concrétiser leur projet académique international.
-</p>
-</div>
+<!-- WELCOME / ABOUT -->
+<section id="about" class="welcome">
+  <div class="container narrow">
+    <h2>About Aigle Consult</h2>
+    <p>
+      Aigle Consult is a consulting agency based in Kinshasa, Democratic Republic
+      of the Congo. We support students wishing to pursue their studies in Europe
+      with professional, transparent, and efficient guidance.
+    </p>
+    <p>
+      Through our partnerships with several European universities, we facilitate
+      access to recognized programs and assist students in realizing their
+      international academic projects.
+    </p>
+    <p class="signature">
+      Professionalism · Transparency · Student Success
+    </p>
+  </div>
 </section>
 
-<section id="contact">
-<h2 data-fr="Contact & inscription" data-en="Contact & Registration">Contact & inscription</h2>
-<div class="about">
-<p data-fr="Vous souhaitez étudier en Europe ? Remplissez le formulaire ci-dessous et notre équipe vous contactera."
-   data-en="Do you want to study in Europe? Fill out the form below and our team will contact you.">
-Vous souhaitez étudier en Europe ? Remplissez le formulaire ci-dessous et notre équipe vous contactera.
-</p>
-<form action="https://formspree.io/f/mlggrgew" method="post">
-<p><input type="text" name="Nom" placeholder="Nom complet" required></p>
-<p><input type="email" name="Email" placeholder="Adresse email" required></p>
-<p><input type="text" name="Pays" placeholder="Pays d'étude souhaité"></p>
-<p><textarea name="Message" placeholder="Votre message" rows="4"></textarea></p>
-<button type="submit" data-fr="Envoyer la demande" data-en="Submit Request">Envoyer la demande</button>
-</form>
-<br>
-<p>
-<strong data-fr="Localisation:" data-en="Location:">Localisation:</strong> Kinshasa, RDC<br>
-<strong data-fr="E-mail:" data-en="E-mail:">E-mail:</strong> <a href="mailto:contact@aigleconsult.net">contact@aigleconsult.net</a><br>
-<strong data-fr="Téléphone:" data-en="Phone:">Téléphone:</strong> <a href="tel:+243827704694">+243 827 704 694</a>
-</p>
-</div>
+<!-- SERVICES (REPLACES COURSES) -->
+<section id="services" class="services">
+  <div class="container">
+    <h2>Our Services</h2>
+
+    <div class="service-grid">
+      <div class="service-card">
+        <h3>Academic Guidance</h3>
+        <p>
+          Personalized guidance to help students choose universities and study
+          programs aligned with their academic background and career goals.
+        </p>
+      </div>
+
+      <div class="service-card highlight">
+        <h3>Application Assistance</h3>
+        <p>
+          Full support throughout the application process, including university
+          applications, registration files, and administrative procedures.
+        </p>
+      </div>
+
+      <div class="service-card">
+        <h3>Partner Universities</h3>
+        <p>
+          Guidance to universities in France, Belgium, Greece, Romania, and
+          Northern Cyprus through established academic partnerships.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
 
-<!-- Bouton WhatsApp flottant -->
-<a href="https://wa.me/243827704694" target="_blank"
-   style="position:fixed;bottom:20px;right:20px;background:#25D366;color:white;
-   padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;
-   box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">
-   WhatsApp
-</a>
-<!-- Bouton Facebook flottant -->
-<a href="https://www.facebook.com/aigleconsult/" target="_blank"
-   style="position:fixed;bottom:80px;right:20px;background:#1877F2;color:white;
-   padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;
-   box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">
-    Facebook
-</a>
+<!-- CONTACT -->
+<section id="contact" class="contact">
+  <div class="container narrow">
+    <h2>Contact & Registration</h2>
+    <p>
+      If you are interested in pursuing your studies in Europe, please complete
+      the form below, and a member of our team will contact you.
+    </p>
 
-<footer>
-<p>© 2026 – Aigle Consult. Tous droits réservés.</p>
+    <form class="form">
+      <input type="text" placeholder="Full Name" required>
+      <input type="email" placeholder="Email Address" required>
+      <textarea placeholder="Your message"></textarea>
+      <button class="btn gold">Submit Request</button>
+    </form>
+
+    <div class="contact-info">
+      <p><strong>Location:</strong> Kinshasa, DRC</p>
+      <p><strong>Email:</strong> contact@aigleconsult.net</p>
+      <p><strong>Phone:</strong> +243 827 704 694</p>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="footer">
+  © 2026 Aigle Consult – Academic Consulting Agency <br>
+  Registered in the Democratic Republic of the Congo
 </footer>
-
-<script>
-function setLang(lang) {
-  document.querySelectorAll('[data-fr]').forEach(el => {
-    el.textContent = el.getAttribute('data-' + lang);
-  });
-}
-</script>
 
 </body>
 </html>
