--- a/index.html
+++ b/index.html
@@ -2,167 +2,326 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
+<title>Aigle Consult – Academic Mobility</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aigle Consult | Conseil & Solutions Professionnelles</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 <style>
-body {margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#1f2937;background:#f9fafb}
-nav {background:#0f172a;padding:1rem 2rem;display:flex;justify-content:space-between;align-items:center}
-nav strong {color:#fff;font-size:1.2rem}
-nav a {color:#e5e7eb;margin-left:1rem;text-decoration:none;font-weight:500}
-nav a:hover{text-decoration:underline}
-header {background:linear-gradient(135deg,#1e3a8a,#2563eb);color:white;padding:5rem 2rem;text-align:center}
-header h1{font-size:2.8rem;margin-bottom:1rem}
-header p{font-size:1.25rem;max-width:700px;margin:auto}
-section{padding:4rem 2rem;max-width:1100px;margin:auto}
-h2{text-align:center;margin-bottom:3rem;font-size:2rem}
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:2rem}
-.card{background:white;border-radius:14px;padding:2rem;box-shadow:0 15px 30px rgba(0,0,0,0.08)}
-.card h3{margin-top:0;color:#1e40af}
-.about{background:#fff;border-radius:14px;padding:3rem;box-shadow:0 10px 25px rgba(0,0,0,0.06)}
-footer{background:#0f172a;color:#9ca3af;text-align:center;padding:2rem}
-button{background:#2563eb;color:white;border:none;padding:0.9rem 2rem;border-radius:999px;font-size:1rem;cursor:pointer}
-button:hover{background:#1d4ed8}
-input,textarea{width:100%;padding:10px;margin-bottom:10px;border:1px solid #ccc;border-radius:6px}
-form p{margin:0 0 10px 0}
+:root {
+  --wine-dark: #3a0d0d;
+  --wine-darker: #2a0707;
+  --wine-light: #7c2d12;
+  --gold: #c9a24d;
+  --bg-light: #f8f6f4;
+  --bg-soft: #f3ecec;
+  --text-dark: #1f2937;
+}
+
+* { margin:0; padding:0; box-sizing:border-box; }
+
+body {
+  font-family: 'Inter', sans-serif;
+  background: var(--bg-light);
+  color: var(--text-dark);
+  line-height: 1.7;
+}
+
+.container { width:90%; max-width:1100px; margin:auto; }
+.narrow { max-width:760px; margin:auto; text-align:center; }
+
+header { background: var(--wine-dark); color:white; }
+.nav {
+  display:flex; justify-content:space-between; align-items:center;
+  padding:18px 0;
+}
+.logo { font-weight:700; letter-spacing:1px; }
+nav a, .lang {
+  color:#f3e8e8; margin-left:22px;
+  text-decoration:none; font-weight:500; cursor:pointer;
+}
+
+.hero {
+  background: linear-gradient(rgba(58,13,13,.9), rgba(58,13,13,.9));
+  color:white;
+  padding:120px 0;
+  text-align:center;
+}
+.hero h1 {
+  font-family:'Playfair Display', serif;
+  font-size:44px;
+}
+.hero span {
+  display:block;
+  font-size:26px;
+  margin-top:12px;
+}
+.hero p {
+  max-width:720px;
+  margin:25px auto 40px;
+  font-size:18px;
+}
+
+.buttons a {
+  display:inline-block;
+  padding:14px 32px;
+  margin:0 8px;
+  font-weight:600;
+  text-decoration:none;
+  border-radius:4px;
+}
+.btn-gold { background:var(--gold); color:var(--wine-dark); }
+.btn-outline { border:1px solid var(--gold); color:var(--gold); }
+
+.about { background:white; padding:90px 0; }
+.about h2 {
+  font-family:'Playfair Display', serif;
+  font-size:36px;
+  margin-bottom:30px;
+}
+
+.services {
+  background:var(--bg-soft);
+  padding:110px 0;
+}
+
+.services h2 {
+  text-align:center;
+  font-family:'Playfair Display', serif;
+  font-size:36px;
+  margin-bottom:15px;
+}
+
+.line {
+  width:90px;
+  height:3px;
+  background:var(--wine-dark);
+  margin:0 auto 60px;
+}
+
+.service-grid {
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px;
+}
+
+.service {
+  background:white;
+  padding:40px;
+  border-top:6px solid var(--wine-dark);
+}
+
+.service.gold { border-top:6px solid var(--gold); }
+
+.service h3 {
+  font-family:'Playfair Display', serif;
+  margin-bottom:15px;
+}
+
+.contact { background:white; padding:100px 0; }
+.contact h2 {
+  font-family:'Playfair Display', serif;
+  font-size:34px;
+  margin-bottom:25px;
+}
+
+form input, form textarea {
+  width:100%;
+  padding:14px;
+  margin-bottom:15px;
+  border:1px solid #d6caca;
+}
+
+form button {
+  background:var(--gold);
+  border:none;
+  padding:14px 32px;
+  font-weight:600;
+  cursor:pointer;
+}
+
+footer {
+  background:var(--wine-darker);
+  color:#e5dcdc;
+  text-align:center;
+  padding:25px;
+  font-size:14px;
+}
+
+.floating {
+  position:fixed;
+  right:20px;
+  bottom:20px;
+  z-index:999;
+}
+
+.floating a {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width:46px;
+  height:46px;
+  margin-top:10px;
+  border-radius:50%;
+  background:var(--wine-dark);
+  color:white;
+  font-size:18px;
+  box-shadow:0 6px 14px rgba(0,0,0,.25);
+}
 </style>
 </head>
+
 <body>
 
-<nav>
-<strong>Aigle Consult</strong>
-<div>
-<a href="#" data-fr="Accueil" data-en="Home">Accueil</a>
-<a href="#services" data-fr="Services" data-en="Services">Services</a>
-<a href="#apropos" data-fr="À propos" data-en="About">À propos</a>
-<a href="#contact" data-fr="Contact" data-en="Contact">Contact</a>
-<button onclick="setLang('fr')" style="margin-left:15px;">FR</button>
-<button onclick="setLang('en')">EN</button>
-</div>
-</nav>
-
 <header>
-<h1 data-fr="Aigle Consult – Solutions professionnelles adaptées à vos besoins"
-    data-en="Aigle Consult – Professional solutions tailored to your needs">
-Aigle Consult – Solutions professionnelles adaptées à vos besoins
-</h1>
-
-<p data-fr="Agence basée à Kinshasa (RDC), nous accompagnons les étudiants dans leurs démarches pour intégrer des universités partenaires en Europe."
-   data-en="Agency based in Kinshasa (DRC), we support students in their process of joining partner universities in Europe.">
-Agence basée à Kinshasa (RDC), nous accompagnons les étudiants dans leurs démarches pour intégrer des universités partenaires en Europe.
-</p>
-
-<br>
+  <div class="container nav">
+    <div class="logo">AIGLE CONSULT</div>
+    <nav>
+      <a href="#about" data-fr="À propos" data-en="About">À propos</a>
+      <a href="#services" data-fr="Services" data-en="Services">Services</a>
+      <a href="#approach" data-fr="Approche" data-en="Approach">Approche</a>
+      <a href="#contact" data-fr="Contact" data-en="Contact">Contact</a>
+      <span class="lang" onclick="setLang('fr')">FR</span> |
+      <span class="lang" onclick="setLang('en')">EN</span>
+    </nav>
+  </div>
 </header>
 
-<section id="services">
-<h2 data-fr="Nos services" data-en="Our Services">Nos services</h2>
-<div class="cards">
-<div class="card">
-<h3 data-fr="Orientation académique" data-en="Academic Guidance">Orientation académique</h3>
-<p data-fr="Conseil personnalisé pour aider les étudiants à choisir des universités et des formations adaptées à leur profil."
-   data-en="Personalized advice to help students choose universities and courses suitable for their profile.">
-Conseil personnalisé pour aider les étudiants à choisir des universités et des formations adaptées à leur profil.
-</p>
-</div>
-<div class="card">
-<h3 data-fr="Accompagnement des démarches" data-en="Application Assistance">Accompagnement des démarches</h3>
-<p data-fr="Assistance complète pour les candidatures universitaires, dossiers d’inscription et procédures administratives."
-   data-en="Complete assistance for university applications, registration files, and administrative procedures.">
-Assistance complète pour les candidatures universitaires, dossiers d’inscription et procédures administratives.
-</p>
-</div>
-<div class="card">
-<h3 data-fr="Pays & universités partenaires" data-en="Partner Countries & Universities">Pays & universités partenaires</h3>
-<p data-fr="Nous accompagnons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord, grâce à nos partenariats académiques."
-   data-en="We guide students to universities in France, Belgium, Greece, Romania, and Northern Cyprus through our academic partnerships.">
-Nous accompagnons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord, grâce à nos partenariats académiques.
-</p>
-</div>
-</div>
+<section class="hero">
+  <div class="container">
+    <h1>
+      AIGLE CONSULT
+      <span
+        data-fr="Mobilité académique & services de partenariat universitaire"
+        data-en="Academic Mobility & University Partnership Services">
+      </span>
+    </h1>
+
+    <p
+      data-fr="Basée à Kinshasa, RDC, nous accompagnons les étudiants dans l’accès à l’enseignement supérieur en Europe."
+      data-en="Based in Kinshasa, DRC, we support students in pursuing higher education opportunities in Europe.">
+    </p>
+
+    <div class="buttons">
+      <a href="#services" class="btn-gold" data-fr="Nos services" data-en="Our Services">Nos services</a>
+      <a href="#contact" class="btn-outline" data-fr="Contactez-nous" data-en="Contact Us">Contactez-nous</a>
+    </div>
+  </div>
 </section>
 
-<section id="apropos">
-<h2 data-fr="À propos de Aigle Consult" data-en="About Aigle Consult">À propos de Aigle Consult</h2>
-<div class="about">
-<p data-fr="Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants désirant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace."
-   data-en="Aigle Consult is a consulting agency based in Kinshasa, DRC. We support students wishing to pursue their studies in Europe with professional, transparent, and efficient guidance.">
-Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants désirant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace.
-</p>
-<p data-fr="Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des formations reconnues et aidons les étudiants à concrétiser leur projet académique international."
-   data-en="Through our partnerships with several European universities, we facilitate access to recognized programs and help students realize their international academic projects.">
-Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des formations reconnues et aidons les étudiants à concrétiser leur projet académique international.
-</p>
-</div>
+<section id="services" class="services">
+  <div class="container">
+    <h2 data-fr="Nos services" data-en="Our Services"></h2>
+    <div class="line"></div>
+
+    <div class="service-grid">
+      <div class="service">
+        <h3 data-fr="Orientation académique" data-en="Academic Guidance"></h3>
+        <p
+          data-fr="Conseils personnalisés pour aider les étudiants à choisir les universités et programmes adaptés à leur profil académique et à leurs objectifs professionnels."
+          data-en="Personalized guidance to help students choose universities and study programs that match their academic background and career goals.">
+        </p>
+      </div>
+
+      <div class="service gold">
+        <h3 data-fr="Assistance aux candidatures" data-en="Application Assistance"></h3>
+        <p
+          data-fr="Accompagnement complet durant tout le processus de candidature, y compris les dossiers universitaires et les procédures administratives."
+          data-en="Full support throughout the application process, including university applications, registration files, and administrative procedures.">
+        </p>
+      </div>
+
+      <div class="service">
+        <h3 data-fr="Pays & universités partenaires" data-en="Partner Countries & Universities"></h3>
+        <p
+          data-fr="Grâce à nos partenariats académiques, nous orientons les étudiants vers des universités en France, Belgique, Grèce, Roumanie et Chypre du Nord."
+          data-en="Through our academic partnerships, we guide students to universities in France, Belgium, Greece, Romania, and Northern Cyprus.">
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
 
-<section id="contact">
-<h2 data-fr="Contact & inscription" data-en="Contact & Registration">Contact & inscription</h2>
-<div class="about">
-<p data-fr="Vous souhaitez étudier en Europe ? Remplissez le formulaire ci-dessous et notre équipe vous contactera."
-   data-en="Do you want to study in Europe? Fill out the form below and our team will contact you.">
-Vous souhaitez étudier en Europe ? Remplissez le formulaire ci-dessous et notre équipe vous contactera.
-</p>
-<form action="https://formspree.io/f/mlggrgew" method="post">
-<p><input type="text" name="Nom" placeholder="Nom complet" required></p>
-<p><input type="email" name="Email" placeholder="Adresse email" required></p>
-<p><input type="text" name="Pays" placeholder="Pays d'étude souhaité"></p>
-<p><textarea name="Message" placeholder="Votre message" rows="4"></textarea></p>
-<button type="submit" data-fr="Envoyer la demande" data-en="Submit Request">Envoyer la demande</button>
-</form>
-<br>
-<p>
-<strong data-fr="Localisation:" data-en="Location:">Localisation:</strong> Kinshasa, RDC<br>
-<strong data-fr="E-mail:" data-en="E-mail:">E-mail:</strong> <a href="mailto:contact@aigleconsult.net">contact@aigleconsult.net</a><br>
-<strong data-fr="Téléphone:" data-en="Phone:">Téléphone:</strong> <a href="tel:+243827704694">+243 827 704 694</a>
-</p>
-</div>
+<section id="about" class="about">
+  <div class="narrow">
+    <h2 data-fr="À propos d’Aigle Consult" data-en="About Aigle Consult"></h2>
+    <p
+      data-fr="Aigle Consult est une agence de conseil basée à Kinshasa, RDC. Nous accompagnons les étudiants souhaitant poursuivre leurs études en Europe avec un encadrement professionnel, transparent et efficace."
+      data-en="Aigle Consult is a consulting agency based in Kinshasa, DRC. We support students wishing to pursue their studies in Europe with professional, transparent, and efficient guidance.">
+    </p>
+    <p
+      data-fr="Grâce à nos partenariats avec plusieurs universités européennes, nous facilitons l’accès à des programmes reconnus et aidons les étudiants à concrétiser leurs projets académiques internationaux."
+      data-en="Through our partnerships with several European universities, we facilitate access to recognized programs and help students realize their international academic projects.">
+    </p>
+    <p
+      data-fr="Notre travail repose sur le professionnalisme, la transparence et un engagement fort envers la réussite des étudiants, dans le respect des standards académiques internationaux."
+      data-en="Our work is based on professionalism, transparency, and a strong commitment to student success, while respecting international academic standards.">
+    </p>
+  </div>
 </section>
 
-<!-- Bouton WhatsApp flottant -->
-<a href="https://wa.me/243827704694" target="_blank"
-   style="position:fixed;bottom:20px;right:20px;background:#25D366;color:white;
-   padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;
-   box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">
-   WhatsApp
-</a>
-<!-- Bouton Facebook flottant -->
-<a href="https://www.facebook.com/aigleconsult/" target="_blank"
-   style="position:fixed;bottom:80px;right:20px;background:#1877F2;color:white;
-   padding:15px 20px;border-radius:999px;text-decoration:none;font-weight:bold;
-   box-shadow:0 10px 20px rgba(0,0,0,0.2);z-index:1000;">
-    Facebook
-</a>
+<section id="approach" class="about">
+  <div class="narrow">
+    <h2 data-fr="Notre approche" data-en="Our Approach"></h2>
+    <p
+      data-fr="Chez Aigle Consult, nous adoptons une approche structurée et éthique de la mobilité académique. Chaque profil étudiant est soigneusement analysé avant toute candidature."
+      data-en="At Aigle Consult, we follow a structured and ethical approach to academic mobility. Each student profile is carefully reviewed before any application is submitted.">
+    </p>
+    <p
+      data-fr="Nous mettons l’accent sur une orientation précise, une documentation conforme et une communication claire afin de garantir le succès académique de chaque étudiant."
+      data-en="We focus on proper guidance, accurate documentation, and clear communication throughout the application process to help students succeed.">
+    </p>
+  </div>
+</section>
+
+<section id="contact" class="contact">
+  <div class="narrow">
+    <h2 data-fr="Contact & inscription" data-en="Contact & Registration"></h2>
+    <p
+      data-fr="Si vous souhaitez poursuivre vos études en Europe, veuillez remplir le formulaire ci-dessous et un membre de notre équipe vous contactera."
+      data-en="If you are interested in pursuing your studies in Europe, please complete the form below and a member of our team will contact you.">
+    </p>
+
+    <form>
+      <input type="text" placeholder="Nom complet / Full name">
+      <input type="email" placeholder="Email">
+      <textarea placeholder="Message"></textarea>
+      <button data-fr="Envoyer la demande" data-en="Submit Request">Envoyer la demande</button>
+    </form>
+
+    <p style="margin-top:30px;">
+      <strong data-fr="Localisation :" data-en="Location:">Localisation :</strong> Kinshasa, RDC<br>
+      <strong>E-mail:</strong> contact@aigleconsult.net<br>
+      <strong data-fr="Téléphone :" data-en="Phone:">Téléphone :</strong> +243 827 704 694
+    </p>
+  </div>
+</section>
 
 <footer>
-<p>© 2026 – Aigle Consult. Tous droits réservés.</p>
+  <span
+    data-fr="© 2026 Aigle Consult – Agence de conseil académique. Enregistrée en République Démocratique du Congo. Tous droits réservés."
+    data-en="© 2026 Aigle Consult – Academic Consulting Agency. Registered in the Democratic Republic of the Congo. All rights reserved.">
+  </span>
 </footer>
+
+<div class="floating">
+  <a href="https://wa.me/243827704694" title="WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+  <a href="#" title="Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+</div>
 
 <script>
 function setLang(lang) {
   document.querySelectorAll('[data-fr]').forEach(el => {
-    el.textContent = el.getAttribute('data-' + lang);
+    el.textContent = el.dataset[lang];
   });
 }
+setLang('fr');
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
